# multimodal-mcp

./: .env.example  .gitignore  .windsurfrules  README.md  RULES.md  install.py  pyproject.toml  requirements.txt  server.py
