[project]
name = "multimodal-mcp"
version = "0.1.0"
description = "MCP server that bridges a vision model and any text-only main model for multimodal image understanding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.scripts]
multimodal-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
